<resources>
    <string name="app_name">PopularMoviesUdacityND</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="title">Title: </string>
    <string name="release_date">Release Date: </string>
    <string name="vote_average">Vote Average: </string>
    <string name="movie_poster">Movie Poster </string>
    <string name="plot_synopsis">Plot Synopsis: \n</string>
    <string name="content_authority">pl.futuredev.popularmoviesudacitynd</string>
    <string name="favorite">Favorite</string>
    <string name="loremipsum">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which
        dont look even slightly believable. If you are going to use a passage of Lorem Ipsum,
        you need to be sure there isnt anything embarrassing hidden in the middle of text.
        All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the
        Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which
        looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc Contrary to popular belief,
        Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a
        Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the
        cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum
        (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of
        Lorem Ipsum, "Lorem ipsum dolor sit amet, comes from a line in section 1.10.32</string>

</resources>
